--- a/blog_Choice.html
+++ b/blog_Choice.html
@@ -45,9 +45,9 @@
           <span>2020.2.13</span>
         </div>
         &emsp; We all might have experience of struggling to make a choice when
-        faced with many similar options? For instance, in shop websites, we may
-        over-think or over-analysis a series of products and end up buying
-        nothing.<br /><br />
+        faced with many similar options. For instance, in shop websites, we may
+        over-think or over-analysis to pick one among a series of products but
+        end up buying nothing.<br /><br />
         To modify the experience, NN Group suggests that :
         <br />&emsp;1.reduce offerings. <br />&emsp;2.categorize offerings
         <br />&emsp;3.highlight top offerings <br />&emsp;4.help user compare
