--- a/blog.html
+++ b/blog.html
@@ -40,6 +40,14 @@
 
       <h1>BLOGS</h1>
       <div class="blogs">
+        <a href="blog_Replay.html" class="bItem1">
+          <div id="blogImage0"></div>
+          <div class="bIntro">
+            Replay Experience in TikTok
+            <span>2020.2.19</span>
+          </div>
+        </a>
+
         <a href="blog_leanUX.html" class="bItem1">
           <div id="blogImage1"></div>
           <div class="bIntro">
