--- a/blog_leanUX.html
+++ b/blog_leanUX.html
@@ -103,9 +103,9 @@
       </div>
 
       <div class="pager">
-        <a href="">
+        <a href="./blog_Replay.html">
           previous
-          <span>Thoughts on Lean UX</span>
+          <span>Replay Experience in TikTok</span>
         </a>
         <a href="./blog_Choice.html">
           next
