--- a/blog_Choice.html
+++ b/blog_Choice.html
@@ -100,7 +100,7 @@
         </a>
         <a href="./blog_Douban.html">
           next
-          <span>Misuse of Modality in Douban APP</span>
+          <span>Modality analysis of Douban APP</span>
         </a>
       </div>
 
@@ -116,20 +116,5 @@
         </div>
       </footer>
     </div>
-
-    <!-- <script
-      type="text/javascript"
-      color="255, 255, 255"
-      zindex="-1"
-      opacity=".5"
-      count="200"
-      src="./js/canvas.js"
-    ></script>
-
-    <canvas
-      width="100%"
-      height="100%"
-      style="position: fixed; top: 0px; left: 0px; z-index: -1;"
-    ></canvas> -->
   </body>
 </html>
