--- a/blog_Replay.html
+++ b/blog_Replay.html
@@ -49,12 +49,12 @@
         restaurants, on streets and so on. Myself is not a user of TikTok, so
         when I heard the BGM of TikTok playing over and over again, I used to
         think the person is watching that video over and over again.
-        <br />&emsp; Recently, my mom watching videos on TikTok and a variety of
+        <br />&emsp; Recently, my mom watches videos on TikTok and a variety of
         TikTok symbolic BGM played over and over again. I am a little bit
         confused and I observe her when she using TikTok. I found out it is not
         her behavior, it is because TikTok plays videos over and over again
         automatically, even when she is viewing the comments of the videos. And
-        she apparently doesn't notice that BGM could disrupt others when she is
+        she apparently doesn't notice that BGM is disturbing when she is
         absorbed in the funny comments.<br /><br />&emsp; Since the users do not
         pay attention to the video while reading comments, why not mute video to
         not bother others. I assume the reasons why TikTok loops videos as
@@ -69,11 +69,26 @@
         with an idea to make TikTok less bothering while maintaining the same
         immersive experience for users:<br />&emsp;
         <span style="font-weight: 900; color: white; left: 50%; right: 50%;"
-          >Video should still loop as before but volume of the video should be
-          lower once the video begins looping. And in each next loop, volume
-          will be lower than previous loop. After 5 loops, video will be
-          mute.</span
+          >The video should still loop as before but the volume of the video
+          should be lower once the video begins looping. And in each next loop,
+          the volume will be lower than the previous loop. In the fifth loops,
+          the video will be mute.</span
         >
+        <div style="text-align: center; margin-top: 15px; margin-bottom: 40px;">
+          <img
+            style="width: 100%;"
+            src="http://r.photo.store.qq.com/psc?/V11TKo8Q1FxsOO/jASqEt644m*KNERKGtvN1VX0BPTJL5Xhp658O9HR1zYS19kl43rhMYU8G17RN1YsAPm8nWVGT8b*xxXr0EMFqnLRVtQQMSLdNr1r64Z3VOY!/r"
+            alt=""
+          />
+        </div>
+        &emsp;Specifically, if someone is using TikTok with earphones, the app
+        will not reduce the volume. Instead, if you are playing videos in
+        public, the volume will be lower automatically. And whether the initial
+        volume is not high enough to bother the around, it will still lower when
+        looping.<br />&emsp;At last, it is hard to test if the idea works, but
+        one thing is sure. That is loud noisy BGM played over and over again do
+        disturb others and harm the brand image of Douyin. And We could transfer
+        our design thinking from user-centered to human-centered to solve this.
       </div>
 
       <div class="pager">
