--- a/index.html
+++ b/index.html
@@ -65,22 +65,22 @@
       </div>
 
       <div class="blog">
-        <a class="blogItem1" href="./blog_leanUX.html">
+        <a class="blogItem1" href="./blog_Replay.html">
           <!-- <img src="./images/douban1.jpg" alt=""> -->
+          <div class="blogIntro">
+            <div class="blogTitle">
+              Replay Experience in TikTok
+            </div>
+            <span>2020.2.19</span>
+          </div>
+        </a>
+        <a class="blogItem2" href="./blog_leanUX.html">
+          <!-- <img src="./images/douban.jpg" alt=""> -->
           <div class="blogIntro">
             <div class="blogTitle">
               Thoughts on Lean UX
             </div>
             <span>2020.2.15</span>
-          </div>
-        </a>
-        <a class="blogItem2" href="./blog_Choice.html">
-          <!-- <img src="./images/douban.jpg" alt=""> -->
-          <div class="blogIntro">
-            <div class="blogTitle">
-              Choice Overload
-            </div>
-            <span>2020.2.13</span>
           </div>
         </a>
         <a class="moreBlog" href="./blog.html"
