--- a/blog_Choice.html
+++ b/blog_Choice.html
@@ -57,7 +57,8 @@
         companies, cutting the product line would be hard, thus adding specific
         information about products could be more applicable to reduce choice
         overload compared to the former.<br />&emsp;For instance, we could
-        <span style="font-weight: 900; color: white;"
+        <span
+          style="font-weight: 900; color: white;text-shadow: 2px 2px 0 #db296d;"
           >add purchasing data about each item to help user decide, such as
           popularity, gender, age, so on and so forth.</span
         ><br />&emsp;Taking iPhone cases' color, for example, users may spend
