--- a/blog_Replay.html
+++ b/blog_Replay.html
@@ -55,20 +55,21 @@
         her behavior, it is because TikTok plays videos over and over again
         automatically, even when she is viewing the comments of the videos. And
         she apparently doesn't notice that BGM is disturbing when she is
-        absorbed in the funny comments.<br /><br />&emsp; Since the users do not
-        pay attention to the video while reading comments, why not mute video to
-        not bother others. I assume the reasons why TikTok loops videos as
-        follow: <br />&emsp; 1. TikTok's videos mostly have a span under a
-        minute, looping video could help the user know the content of it if
-        videos contain much information. <br />&emsp; 2. Not only videos, but
-        the community is an important part of TikTok. My mom often takes much
-        more time to read comments than watch short videos. Thus looping video
-        helps the user have a feeling of engagement with this video when they
-        comment or read comments. <br /><br />&emsp; However, looping videos
-        might influence people around by noisy earworms. Therefore I come up
-        with an idea to make TikTok less bothering while maintaining the same
-        immersive experience for users:<br />&emsp;
-        <span style="font-weight: 900; color: white; left: 50%; right: 50%;"
+        absorbed in the funny comments.<br /><br />&emsp; I assume the reasons
+        why TikTok loops videos as follow: <br />&emsp; 1. TikTok's videos
+        mostly have a span under a minute, looping video could help the user
+        know the content of it if videos contain much information. <br />&emsp;
+        2. Not only videos, but the community is an important part of TikTok. My
+        mom often takes much more time to read comments than watch short videos.
+        Thus looping video helps the user have a feeling of engagement with this
+        video when they comment or read comments. <br /><br />&emsp; Since the
+        users do not pay attention to the video while reading comments, why not
+        just mute video to not bother others. Looping videos might influence
+        people around by noisy earworms. Therefore I come up with an idea to
+        make TikTok less bothering while maintaining the same immersive
+        experience for users:<br />&emsp;
+        <span
+          style="font-weight: 900; color: white; left: 50%; right: 50%; text-shadow: 2px 2px 0 #db296d;"
           >The video should still loop as before but the volume of the video
           should be lower once the video begins looping. And in each next loop,
           the volume will be lower than the previous loop. In the fifth loops,
@@ -81,8 +82,8 @@
             alt=""
           />
         </div>
-        &emsp;Specifically, if someone is using TikTok with earphones, the app
-        will not reduce the volume. Instead, if you are playing videos in
+        &emsp;More specifically, if someone is using TikTok with earphones, the
+        app will not reduce the volume. Instead, if you are playing videos in
         public, the volume will be lower automatically. And whether the initial
         volume is not high enough to bother the around, it will still lower when
         looping.<br />&emsp;At last, it is hard to test if the idea works, but
