--- a/blog_leanUX.html
+++ b/blog_leanUX.html
@@ -44,62 +44,30 @@
           Thoughts on Lean UX
           <span>2020.2.15</span>
         </div>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde sequi
-        suscipit culpa inventore tempora harum saepe, esse repellendus ipsam,
-        est illo fugit corrupti praesentium numquam amet laboriosam ipsa, libero
-        distinctio perferendis veniam excepturi hic. Veritatis magni earum
-        excepturi fugiat debitis odit natus esse aspernatur eligendi! Tempore
-        odit officia doloremque quisquam itaque earum odio architecto mollitia
-        fugiat unde reiciendis aspernatur nemo nostrum modi corrupti explicabo
-        minima quos vitae consectetur, incidunt veritatis libero! Quos velit
-        doloribus voluptas autem aliquam, accusamus eius? Voluptatem magni
-        perferendis doloribus consequuntur eaque inventore explicabo corporis,
-        odit perspiciatis pariatur vitae corrupti modi eos sunt minus voluptate
-        quaerat soluta quas molestias? Inventore laborum totam sunt explicabo
-        sit, quo ad sequi sint autem aliquam repellat ex nobis rerum quos minima
-        recusandae officia aliquid eveniet id. Cum incidunt accusantium dolore
-        mollitia dolores facere repudiandae beatae quod cupiditate adipisci
-        dolorum officiis eum, architecto nam quo numquam reprehenderit unde
-        vero. Recusandae ipsa animi dignissimos sit, magni quae maxime incidunt
-        soluta necessitatibus error sint? Eum, reprehenderit quo iste et
-        temporibus dolores enim reiciendis asperiores aspernatur blanditiis
-        repudiandae odit omnis impedit, nisi dignissimos sit in dolore rem
-        voluptatum non velit, maxime tenetur? Amet repudiandae tempore sapiente,
-        dolorem aliquid ducimus nulla reprehenderit accusantium quibusdam sequi
-        error quis modi nisi odit voluptatibus! Nihil, blanditiis consequuntur
-        eveniet ex, optio dolor exercitationem debitis qui aspernatur at facere
-        fugiat aliquid? Consectetur necessitatibus veniam perspiciatis libero,
-        hic incidunt iure nemo, non odio, ea ducimus quidem voluptas iusto vero
-        itaque cupiditate ab at. Exercitationem perferendis enim accusamus sint
-        repudiandae voluptates corrupti sequi recusandae voluptatum aut expedita
-        nemo officia tempore doloribus natus voluptatem commodi totam odit
-        dolorem, labore nesciunt eos rerum suscipit necessitatibus? Totam, ullam
-        pariatur voluptatem id impedit corporis illum at quis beatae aliquam.
-        Eos iste dicta cumque exercitationem adipisci ea? Numquam voluptatem
-        beatae assumenda magnam, magni aliquam fugiat debitis vel quisquam
-        molestias dignissimos corporis expedita architecto quod vero, eius error
-        praesentium aperiam impedit sit? Vitae enim dignissimos culpa officia
-        repellat labore inventore neque voluptas voluptates eveniet, aspernatur
-        pariatur atque minus provident quod quasi eaque, quae, eum repudiandae
-        sit nam assumenda quibusdam dolorum! Error quasi ducimus esse, qui
-        cupiditate mollitia, velit explicabo officiis facilis, nostrum quo
-        reprehenderit officia et minima! Officia nesciunt voluptate natus velit
-        sunt, ducimus repellendus perspiciatis ea hic quas explicabo voluptas
-        expedita asperiores sequi similique nisi aut beatae debitis? Quidem et
-        quo quam aut ipsum aspernatur nam voluptas omnis cumque officiis
-        quibusdam dolores modi consectetur nostrum laudantium, beatae quasi
-        nihil placeat reiciendis debitis alias voluptate vero? Ipsa modi
-        sapiente accusamus placeat ipsum aliquid quos iste et beatae libero
-        dicta, dolores aperiam adipisci eligendi? Deleniti iste dicta molestiae,
-        aspernatur nihil dignissimos ex maiores delectus facere. Blanditiis
-        perferendis suscipit et sit nesciunt vel tenetur aperiam sapiente
-        temporibus saepe minus incidunt aut recusandae facilis pariatur
-        reiciendis quaerat dolore, accusantium quis dignissimos cum ex modi
-        fugiat neque? Dolore atque ipsum impedit mollitia, quisquam reiciendis,
-        praesentium nostrum, distinctio itaque hic qui exercitationem aut.
-        Officia voluptates doloribus explicabo illum enim fugiat suscipit
-        asperiores obcaecati! Pariatur aliquam, cumque dolores numquam ex
-        accusamus sequi exercitationem necessitatibus esse?
+        &emsp;Recently I’ve learned the term "Lean UX”, which refers to a new
+        methodology of user experience design process. It is the first time I
+        hear this term. I looked up it through various channels on the Internet.
+        Here are my gains. <br />&emsp;LeanUX is an emerging methodology that
+        combines Agile Dev and UX. Basically, it applies Agile Dev methods into
+        UX design and forms a process which requires quickly iterating to reduce
+        waste. There are many differences between the traditional UX design
+        process and leanUX. In my view, the heart of leanUX is fast and small.
+        <br />&emsp;LeanUX focuses more on the outcome of a design instead of
+        problems. The first step of LeanUX is imagining outcomes. Then designers
+        make some assumptions according to the expecting outcome to come realize
+        that outcome. Then analyze all assumptions to pick up ones practical.
+        The next step is to take action to validate the assumptions. Then is
+        making some other assumptions based on the results of previous actions
+        to continue the next loop, make assumptions, take action, get feedback,
+        make assumptions.... <br />&emsp;In all, the design by leanUX is shaped
+        by results or data, it grows up with feedback. The method coincides with
+        analysis methods mentioned in
+        <span style="font-style: italic;">Pyramid Principle</span>. The author
+        of that book suggested that consultants in McKinsey adopt a new way to
+        analyze more efficient. They used to gather up all materials and then
+        research them by order. But now, they make assumptions before research
+        and then set up from the most relevant. If nothing was founded, they
+        make another assumptions.
       </div>
 
       <div class="pager">
