--- a/blog_Replay.html
+++ b/blog_Replay.html
@@ -88,7 +88,7 @@
         volume is not high enough to bother the around, it will still lower when
         looping.<br />&emsp;At last, it is hard to test if the idea works, but
         one thing is sure. That is loud noisy BGM played over and over again do
-        disturb others and harm the brand image of Douyin. And We could transfer
+        disturb others and harm the brand image of TikTok. And We could transfer
         our design thinking from user-centered to human-centered to solve this.
       </div>
 
