--- a/blog_leanUX.html
+++ b/blog_leanUX.html
@@ -47,27 +47,36 @@
         &emsp;Recently I’ve learned the term "Lean UX”, which refers to a new
         methodology of user experience design process. It is the first time I
         hear this term. I looked up it through various channels on the Internet.
-        Here are my gains. <br />&emsp;LeanUX is an emerging methodology that
-        combines Agile Dev and UX. Basically, it applies Agile Dev methods into
-        UX design and forms a process which requires quickly iterating to reduce
-        waste. There are many differences between the traditional UX design
-        process and leanUX. In my view, the heart of leanUX is fast and small.
-        <br />&emsp;LeanUX focuses more on the outcome of a design instead of
-        problems. The first step of LeanUX is imagining outcomes. Then designers
-        make some assumptions according to the expecting outcome to come realize
-        that outcome. Then analyze all assumptions to pick up ones practical.
-        The next step is to take action to validate the assumptions. Then is
-        making some other assumptions based on the results of previous actions
-        to continue the next loop, make assumptions, take action, get feedback,
-        make assumptions.... <br />&emsp;In all, the design by leanUX is shaped
-        by results or data, it grows up with feedback. The method coincides with
-        analysis methods mentioned in
-        <span style="font-style: italic;">Pyramid Principle</span>. The author
-        of that book suggested that consultants in McKinsey adopt a new way to
-        analyze more efficient. They used to gather up all materials and then
+        Here are my gains. <br /><br />&emsp;LeanUX is an emerging methodology
+        that combines Agile Dev and UX. Basically, it applies Agile Dev methods
+        into UX design and forms a process which requires quickly iterating to
+        reduce waste. There are many differences between the traditional UX
+        design process and leanUX. In my view, the heart of leanUX is fast and
+        small. <br />&emsp;LeanUX focuses more on the outcome of a design
+        instead of problems. The first step of LeanUX is imagining outcomes.
+        Then designers make some assumptions according to the expecting outcome
+        to come realize that outcome. Then analyze all assumptions to pick up
+        ones practical. The next step is to take action to validate the
+        assumptions. Then is making some other assumptions based on the results
+        of previous actions to continue the next loop, make assumptions, take
+        action, get feedback, make assumptions... <br /><br />&emsp;The design
+        by leanUX is shaped by results or data, it grows up with feedback. The
+        method coincides with the analysis methods mentioned in
+        <span style="font-style: italic;">the Pyramid Principle</span>. The
+        author of that book said that consultants in McKinsey adopt a new way to
+        analyze more efficiently. They used to gather up all materials and then
         research them by order. But now, they make assumptions before research
-        and then set up from the most relevant. If nothing was founded, they
-        make another assumptions.
+        and then set off from the most relevant. If nothing was founded, they
+        would make other assumptions and turn to other directions. The way of
+        continuous attempts to approach the truth is very efficient and may
+        become common in more fields. <br />&emsp;Besides, the data formed
+        design reminds me of a story of Disney: When a new Disney park was going
+        to open, the road of the park was still unfinished. The designer camp up
+        a great idea. Pave grass everywhere instead of pavements and then
+        pre-open the park to let tourists walk free to see which path they
+        choose. And then, they pave according to the trails left by tourists.
+        The process of paving is similar to leanUX: Make a raw product to test
+        and constantly refine it according to feedback.
       </div>
 
       <div class="pager">
@@ -93,20 +102,5 @@
         </div>
       </footer>
     </div>
-
-    <!-- <script
-      type="text/javascript"
-      color="255, 255, 255"
-      zindex="-1"
-      opacity=".5"
-      count="200"
-      src="./js/canvas.js"
-    ></script>
-
-    <canvas
-      width="100%"
-      height="100%"
-      style="position: fixed; top: 0px; left: 0px; z-index: -1;"
-    ></canvas> -->
   </body>
 </html>
