--- a/index.html
+++ b/index.html
@@ -39,20 +39,20 @@
         </div>
       </nav>
       <div class="slogan">
-        Welcome to Yuqi Space
+        Welcome to Qi Space
         <span
           >The Space is built to display my works and to share my thoughts on
           design.</span
         >
       </div>
       <div class="activity">
-        <a class="work1" href="">
+        <a class="work1" href="./works/work_Share.html">
           <div class="intro">
             SHARE·BOX
             <span>Interaction Design</span>
           </div>
         </a>
-        <a class="work2" href="">
+        <a class="work2" href="./works/work_Prepal.html">
           <div class="intro">
             PREPAL
             <span>Interaction Design</span>
