--- a/work.html
+++ b/work.html
@@ -41,13 +41,13 @@
 
       <h1>WORKS</h1>
       <div class="works">
-        <a href="" class="workItem" id="wi1">
+        <a href="./works/work_Share.html" class="workItem" id="wi1">
           <div class="intro">
             SHARE·BOX
             <span>Interaction Design</span>
           </div>
         </a>
-        <a href="" class="workItem" id="wi2">
+        <a href="./works/work_Prepal.html" class="workItem" id="wi2">
           <div class="intro">
             PREPAL
             <span>Interaction Design</span>
