--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
       </nav>
       <div class="slogan">
-        Welcome to Qi Space
+        Welcome to yuQi Space
         <span
           >The Space is built to display my works and to share my thoughts on
           design.</span
