--- a/work.html
+++ b/work.html
@@ -53,7 +53,7 @@
             <span>Interaction Design</span>
           </div>
         </a>
-        <a href="" class="workItem" id="wi3">
+        <a href="./works/work_Hospass.html" class="workItem" id="wi3">
           <div class="intro">
             HOSPASS
             <span>Interaction Design</span>
