--- a/works/work_Prepal.html
+++ b/works/work_Prepal.html
@@ -124,7 +124,7 @@
           previous
           <span>Share·Box</span>
         </a>
-        <a href="">
+        <a href="../works/work_Hospass.html">
           next
           <span>Hospass</span>
         </a>
