--- a/work.html
+++ b/work.html
@@ -59,7 +59,7 @@
             <span>Interaction Design</span>
           </div>
         </a>
-        <a href="" class="workItem" id="wi4">
+        <a href="./works/work_Ficars.html" class="workItem" id="wi4">
           <div class="intro">
             FICARS
             <span>Interaction Design</span>
