--- a/blog.html
+++ b/blog.html
@@ -67,7 +67,7 @@
         <a href="./blog_Douban.html" class="bItem3">
           <div id="blogImage3"></div>
           <div class="bIntro">
-            Modality analysis of Douban APP
+            Modality in Douban APP
             <span>2019.12.21</span>
           </div>
         </a>
