--- a/blog_Choice.html
+++ b/blog_Choice.html
@@ -101,7 +101,7 @@
         </a>
         <a href="./blog_Douban.html">
           next
-          <span>Modality analysis of Douban APP</span>
+          <span>Modality in Douban APP</span>
         </a>
       </div>
 
