--- a/blog_Douban.html
+++ b/blog_Douban.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Modality analysis of Douban APP</title>
+    <title>Modality in Douban APP</title>
     <link rel="icon" href="./images/ICON.png" />
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/common.css" />
@@ -41,7 +41,7 @@
 
       <div class="content">
         <div class="title">
-          Modality analysis of Douban APP
+          Modality in Douban APP
           <span>2019.12.21</span>
         </div>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde sequi
