--- a/work.html
+++ b/work.html
@@ -71,7 +71,7 @@
             <span>Visual Design</span>
           </div>
         </a>
-        <a href="" class="workItem" id="wi6">
+        <a href="./works/work_Ecust.html" class="workItem" id="wi6">
           <div class="intro">
             SoADM ECUST
             <span>Visual Design</span>
