--- a/works/work_Ecust.html
+++ b/works/work_Ecust.html
@@ -106,11 +106,11 @@
       <div class="pager">
         <a href="../works/work_Hospass.html">
           previous
-          <span>Hospass</span>
+          <span>SoD SJTU</span>
         </a>
         <a href="">
           next
-          <span>SoD SJTU</span>
+          <span>none</span>
         </a>
       </div>
 
