--- a/works/work_Sjtu.html
+++ b/works/work_Sjtu.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>SoADM-ECUST by YUQI</title>
+    <title>SoD-SJTU by YUQI</title>
     <link rel="icon" href="../images/ICON.png" />
     <link rel="stylesheet" href="../css/reset.css" />
     <link rel="stylesheet" href="../css/common.css" />
@@ -41,7 +41,7 @@
 
       <div class="content">
         <div class="title">
-          SoADM-ECUST
+          SoD-SJTU
           <span>Visual Design</span>
         </div>
         <div class="pic">
@@ -106,11 +106,11 @@
       <div class="pager">
         <a href="../works/work_Hospass.html">
           previous
-          <span>SoD-SJTU</span>
+          <span>FICARS</span>
         </a>
-        <a href="">
+        <a href="../works/work_Sjtu.html">
           next
-          <span>none</span>
+          <span>SoADM-ECUST</span>
         </a>
       </div>
 
