--- a/work.html
+++ b/work.html
@@ -65,7 +65,7 @@
             <span>Interaction Design</span>
           </div>
         </a>
-        <a href="" class="workItem" id="wi5">
+        <a href="./works/work_Sjtu.html" class="workItem" id="wi5">
           <div class="intro">
             SoD SJTU
             <span>Visual Design</span>
