--- a/works/work_Ecust.html
+++ b/works/work_Ecust.html
@@ -51,7 +51,7 @@
             style="width: 1152px;"
           />
           <img
-            src="http://r.photo.store.qq.com/psc?/V11TKo8Q2AzwgM/jASqEt644m*KNERKGtvN1e7ifRxzA8C*1wFEhjOFwiDfjdAIR*UpMAPU*VlHaob8ddcT64Rzdpxh7W20*canK3*fjtWFO6wxANwC4.2ii8U!/r"
+            src="http://r.photo.store.qq.com/psc?/V11TKo8Q2AzwgM/jASqEt644m*KNERKGtvN1YgnkAUcWKg2p4Q*DlEeW37SyE81nDXbDdeGtPYsQ2jwucYCS4mioN*RjSbORrOEk.dwd95gzeeM.ndwfXOtaLE!/r"
             alt=""
             style="width: 1152px;"
           />
@@ -104,13 +104,13 @@
       </div>
 
       <div class="pager">
-        <a href="../works/work_Hospass.html">
+        <a href="../works/work_Sjtu.html">
           previous
           <span>SoD-SJTU</span>
         </a>
-        <a href="">
-          next
-          <span>none</span>
+        <a href="../work.html">
+          back to
+          <span>List</span>
         </a>
       </div>
 
