--- a/works/work_Ficars.html
+++ b/works/work_Ficars.html
@@ -103,7 +103,7 @@
           previous
           <span>Hospass</span>
         </a>
-        <a href="">
+        <a href="../works/work_Sjtu.html">
           next
           <span>SoD SJTU</span>
         </a>
