--- a/works/work_Share.html
+++ b/works/work_Share.html
@@ -99,9 +99,9 @@
       </div>
 
       <div class="pager">
-        <a href="../blog_Choice.html">
-          previous
-          <span>Share·Box</span>
+        <a href="../work.html">
+          back to
+          <span>List</span>
         </a>
         <a href="../works/work_Prepal.html">
           next
