--- a/work.html
+++ b/work.html
@@ -35,7 +35,7 @@
           <a href="./work.html">WORKS</a>
           <a href="./blog.html">BLOGS</a>
           <a href="">ABOUT</a>
-          <a href="">CONTACT</a>
+          <a href="#contact">CONTACT</a>
         </div>
       </nav>
 
