--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>YUQI Design</title>
+    <title>yuqiDesign</title>
     <link rel="icon" href="./images/ICON.png" />
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/common.css" />
     <link
       rel="stylesheet"
-      href="https://at.alicdn.com/t/font_1615281_awip3ln3vkq.css"
+      href="https://at.alicdn.com/t/font_1615281_6c4rrgsqx9n.css"
     />
     <link
       href="https://fonts.font.im/css?family=IBM+Plex+Sans:300,300i,500,500i,700,700i"
@@ -31,6 +31,8 @@
             <h1>YUQI Design</h1></a
           >
         </div>
+        <label for="menu"><i id="bar" class="iconfont icon-bars"></i></label>
+        <input type="checkbox" id="menu" />
         <div class="navitem">
           <a href="./work.html">WORKS</a>
           <a href="./blog.html">BLOGS</a>
