--- a/works/work_Sjtu.html
+++ b/works/work_Sjtu.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../css/common.css" />
     <link
       rel="stylesheet"
-      href="https://at.alicdn.com/t/font_1615281_awip3ln3vkq.css"
+      href="https://at.alicdn.com/t/font_1615281_6c4rrgsqx9n.css"
     />
     <link
       href="https://fonts.font.im/css?family=IBM+Plex+Sans:300,300i,500,500i,700,700i"
@@ -31,6 +31,8 @@
             <h1>YUQI Design</h1></a
           >
         </div>
+        <label for="menu"><i class="iconfont icon-bars"></i></label>
+        <input type="checkbox" id="menu" />
         <div class="navitem">
           <a href="../work.html">WORKS</a>
           <a href="../blog.html">BLOGS</a>
