--- a/blog_Douban.html
+++ b/blog_Douban.html
@@ -109,14 +109,16 @@
           previous
           <span>Choice Overload</span>
         </a>
-        <a href="">
-          next
-          <span>Lorem ipsum dol</span>
+        <a href="blog.html">
+          back to
+          <span>List</span>
         </a>
       </div>
 
-      <footer class="contact">
-        <a href="" id="logo"><img src="./images/logo.png" alt=""/></a>
+      <footer class="contact" id="contact">
+        <a href="https://yuqidesign.github.io" id="logo"
+          ><img src="./images/logo.png" alt=""
+        /></a>
         <div id="phone">
           <span>WeChat & Phone</span>
           152 1683 1797
@@ -127,20 +129,5 @@
         </div>
       </footer>
     </div>
-
-    <!-- <script
-      type="text/javascript"
-      color="255, 255, 255"
-      zindex="-1"
-      opacity=".5"
-      count="200"
-      src="./js/canvas.js"
-    ></script>
-
-    <canvas
-      width="100%"
-      height="100%"
-      style="position: fixed; top: 0px; left: 0px; z-index: -1;"
-    ></canvas> -->
   </body>
 </html>
