--- a/blog.html
+++ b/blog.html
@@ -79,7 +79,7 @@
         </div>
       </div>
 
-      <footer class="contact">
+      <footer class="contact" id="contact">
         <a href="" id="logo"><img src="./images/logo.png" alt=""/></a>
         <div id="phone">
           <span>WeChat & Phone</span>
