--- a/work.html
+++ b/work.html
@@ -86,7 +86,7 @@
         </a>
       </div>
 
-      <footer class="contact">
+      <footer class="contact" id="contact">
         <a href="" id="logo"><img src="./images/logo.png" alt=""/></a>
         <div id="phone">
           <span>WeChat & Phone</span>
@@ -98,20 +98,5 @@
         </div>
       </footer>
     </div>
-
-    <!-- <script
-      type="text/javascript"
-      color="255, 255, 255"
-      zindex="-1"
-      opacity=".5"
-      count="200"
-      src="./js/canvas.js"
-    ></script>
-
-    <canvas
-      width="100%"
-      height="100%"
-      style="position: fixed; top: 0px; left: 0px; z-index: -1;"
-    ></canvas> -->
   </body>
 </html>
