--- a/works/work_Prepal.html
+++ b/works/work_Prepal.html
@@ -118,7 +118,7 @@
         </a>
       </div>
 
-      <footer class="contact">
+      <footer class="contact" id="contact">
         <a href="" id="logo"><img src="../images/logo.png" alt=""/></a>
         <div id="phone">
           <span>WeChat & Phone</span>
