--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       <div class="about" id="about">
         <div class="aboutItem" id="name">
           <span>My name is </span>
-          Mitch Wang
+          Yuqi Wang
         </div>
         <div class="aboutItem" id="address">
           <span>I come from</span>
